--- a/mqex04/imagens/estilos/queries.css
+++ b/mqex04/imagens/estilos/queries.css
@@ -22,19 +22,21 @@ body{
 
 main{
     background-color: rgba(255, 255, 255, 0.829);
-    width: 400px;
+    width: 85vw;
     margin-top: 20px;
     margin:auto;
     border-radius: 10px;
     padding: 10px;
 }
+
 h1{
     width: 80vw;
-    font-size: 2em;
+    font-size: 1.5em;
     color: white;
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.712);
     text-align: center;
 }
+
 img{
     display:block;
     margin: auto;
