--- a/mqex04/imagens/estilos/print.css
+++ b/mqex04/imagens/estilos/print.css
@@ -15,11 +15,24 @@
   
 }
 
+@media  screen and (min-width: 300px) and (max-width: 600px) {
+  
+  body{
+    background-image: url(../back-phone.jpg);
+  }
 
-@media screen and (min-width: 768px) and (max-width: 992px) {
+  img#cel{display: block;}
+    img#tablet {display: none;}
+    img#print {display: none;}
+    img#pc {display:none;}
+    img#tv{display: none;}
+}
+
+
+@media screen and (min-width: 600px) and (max-width: 992px) {
 
     body{
-      background-image: url(../back-tablet.jpg);
+      background-image: url(../back-tablet.jpg) ;
     }
 
     img#cel{display: none;}
